--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
+    "@pinia/nuxt": "^0.6.1",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vueuse/core": "^11.2.0",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
