--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
     "@pinia/nuxt": "^0.6.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vueuse/core": "^11.2.0",
+    "js-cookie": "^3.0.5",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "vue": "^3.5.12",
     "vue-router": "latest"
   },
