--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.6.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vueuse/core": "^11.2.0",
+    "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
